--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
     <body>
-
+        <a href="/login">Click here to go to login</a>
     </body>
 
 <%- include('partials/footer') %>
