--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
 <%- include('partials/header') %>
 
     <body>
-
+    This is where we put game
+    <a href="/chat">Click here to go to chat</a>
     </body>
 
 <%- include('partials/footer') %>
