--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,8 @@
 
     <body>
     This is where we put game
-    <a href="/chat">Click here to go to chat</a>
+    <br>
+    <a href="/chat">Click here to go to the game</a>
     </body>
 
 <%- include('partials/footer') %>
