--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <body>
     This is where we put game
     <br>
-    <a href="/chat">Click here to go to the game</a>
+    <a href="/chat">Click here to go to the chat</a>
     </body>
 
 <%- include('partials/footer') %>
