--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,8 @@
     <body>
     This is where we put game
     <br>
+    <a href="/game">Click here to go to the game</a>
+    <br>
     <a href="/chat">Click here to go to the chat</a>
     </body>
 
