--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,7 @@
 
     <body>
     This is where we put game
-    <br>
-    <a href="/game">Click here to go to the game</a>
-    <br>
-    <a href="/chat">Click here to go to the chat</a>
+    <a href="/chat">Click here to go to chat</a>
     </body>
 
 <%- include('partials/footer') %>
