--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            color: rgb(6, 77, 24);
+            text-decoration: none;
+        }
+    </style>
 </head>
