Snakeimg's + added RWD

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,5 +17,12 @@
             color: rgb(6, 77, 24);
             text-decoration: none;
         }
+
+        @media screen and (max-width: 600px) {
+            #content {
+                float: none;
+                width: 100%
+            }
+        }
     </style>
 </head>
