--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         @media screen and (max-width: 600px) {
             #content {
                 float: none;
-                width: 100%
+                width: 100%;
             }
         }
     </style>
