Fixed tail and added documentation

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
     <body>
-        This is where we put game
+        <!-- This is the home page with links to the game and chat page -->
         <br>
         <a href="/game">Click here to go to the game</a>
         <br>
