--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 
     <body>
+        <!-- This is the login link -->
         <a href="/login">Click here to go to login</a>
     </body>
 
