--- a/views/game.ejs
+++ b/views/game.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
 
+    <!-- Styles for the game canvas -->
     <style>
         body {
             text-align: center;
@@ -18,8 +19,10 @@
 </head>
 
 <body>
-    <!-- Sets the movement area for the player -->
+    <!-- Sets the canvas for the player -->
     <canvas id="canvas" style="border: 4px solid black;"></canvas>
 </body>
+
 <script src="/snake.js"></script>
+
 </html>
