--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header') %>
 
     <body>
-
+        <!-- This is the login page -->
         <form action="/login" method="POST">
-            <input name="user" type="text" placeholder="Username">
-            <input name="pass" type="password" placeholder="Password">
-            <input type="submit" value="Submit">
+            <input name="user" type="text" placeholder="Username"> <!-- Username -->
+            <input name="pass" type="password" placeholder="Password"> <!-- Password -->
+            <input type="submit" value="Submit"> <!-- Submit button -->
         </form>
 
     </body>
