--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
         <a href="/game">Click here to go to the game</a>
         <br>
         <a href="/chat">Click here to go to the chat</a>
+        <br>
+        <a href="/logout">Click here to logout</a>
     </body>
 
     <%- include('partials/footer') %>
