--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,21 @@
 <%- include('partials/header') %>
 
-    <body>
-        <!-- This is the home page with links to the game and chat page -->
-        <br>
-        <a href="/game">Click here to go to the game</a>
-        <br>
-        <a href="/chat">Click here to go to the chat</a>
-        <br>
-        <a href="/logout">Click here to logout</a>
-    </body>
+<head>
+    <title>Welcome to Our Cute Page</title>
+    <link rel="stylesheet" type="text/css" href="/styles/home.css">
+</head>
 
-    <%- include('partials/footer') %>
+<body>
+    <!-- This is the home page with links to the game and chat page -->
+    <div class="container">
+        <h1>Welcome to our Snake Game!</h1>
+        <p>Choose an option below:</p>
+        <div class="links">
+            <a href="/game" class="cute-button">Go to the Game</a>
+            <a href="/chat" class="cute-button">Go to the Chat</a>
+            <a href="/logout" class="cute-button">Logout</a>
+        </div>
+    </div>
+</body>
+
+<%- include('partials/footer') %>
