--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header') %>
 
+    <head>
+        <title>Login to play Snake!</title>
+        <link rel="stylesheet" type="text/css" href="/styles/login.css">
+    </head>
+
     <body>
         <!-- This is the login page -->
         <form action="/login" method="POST">
