--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,8 @@
 <body>
     <!-- This is the home page with links to the game and chat page -->
     <div class="container">
-        <h1>Welcome to our Snake Game!</h1>
+        <h1>Welcome to Snake Game!</h1>
+        <p>Created by: The Garter company!</p>
         <p>Choose an option below:</p>
         <div class="links">
             <a href="/game" class="cute-button">Go to the Game</a>
