--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,14 @@
 <%- include('partials/header') %>
+    <!DOCTYPE html>
+    <html lang="en">
 
     <head>
-        <title>Login to play Snake!</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <h2>Login to Play Snake!</h2>
         <link rel="stylesheet" type="text/css" href="/styles/login.css">
+
     </head>
 
     <body>
@@ -14,5 +20,7 @@
         </form>
 
     </body>
+
+    </html>
 
     <%- include('partials/footer') %>
