--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -18,6 +18,7 @@
                     </div>
                 </div>
             </div>
+            <a href="/home">Click here to go home</a>
         </div>
 
         <script>
