--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,10 @@
     <body>
         <!-- This is the home page with links to the game and chat page -->
         <div class="container">
+            <br><br>
             <h1>Welcome to Snake Game!</h1>
-            <img id="snake" src="/img/SnakeMenu.png" style="position: absolute; top: 50px; left: 0; width: 100px;">
+            <img id="snake" src="/img/SnakeMenu.png" style="position: absolute; top: 50px; left: 0; width: 200px; height: 50px;">
+        
 
             <p>Created by: The Garter company!</p>
             <p>Choose an option below:</p>
@@ -24,11 +26,14 @@
     <script>
         const snake = document.getElementById('snake');
         let position = 0;
+        let speed = 5
         const screenWidth = window.innerWidth;
 
         function moveSnake() {
-            position += 5;
+            position += speed
             if (position > screenWidth) {
+                speed ++ //Speeds up snake gradually 
+                if (speed == 10) speed = 5 //Resets speed after it 
                 position = -100; // Reset position to start from the left
             }
             snake.style.left = position + 'px';
