--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
     <head>
-        <title>Welcome to Our Cute Page</title>
+        <title>Home</title>
         <link rel="stylesheet" type="text/css" href="/styles/home.css">
     </head>
 
