Reformatting and made the buttons work

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,12 +38,12 @@
                 <a href="/game" class="cute-button">Play the Game!</a>
                 <a href="/chat" class="cute-button">World Chat</a>
                 <a href="/highScore" class="cute-button">View Top Scores</a>
-                <a href="/index.html" class="cute-button">Go to The Shop</a>
+                <a href="/shop.html" class="cute-button">Go to The Shop</a>
                 <a href="/logout" class="cute-button">Logout</a>
             </div>
         </div>
     </body>
-    
+
     <script>
         const snake = document.getElementById('snake');
         let position = 0;
