--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<%- include('partials/style') %>
+<!-- 
+RENAME TO SHOP.EJS
+PUT IN VIEWS
+ADD POST IN APP.JS
+ADD TO ROUTES
+  -->
 <html lang="en">
 
 <head>
