--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,9 +1,11 @@
 <%- include('partials/header') %>
+<%- include('partials/style') %>
 
     <body>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+                    <br>
                     <h1>Chat with the World</h1>
                     <form id="chat-form">
                         <div class="form-group">
