--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,67 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+<%- include('partials/style') %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snake</title>
-  <style>
-    body {
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      transition: background-color 0.3s ease;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake</title>
+    <style>
+      body {
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        transition: background-color 0.3s ease;
+      }
 
-    canvas {
-      border: 4px solid black;
-      margin-top: 50px;
-    }
+      canvas {
+        border: 4px solid black;
+        margin-top: 50px;
+      }
+    </style>
+  </head>
 
-    #bgButton {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      padding: 10px 15px;
-      font-size: 14px;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-  </style>
-</head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <h1><a href="/home">Click here to go back home</a></h1>
 
-<body>
-  <button id="bgButton">Background Color</button>
-  <canvas id="canvas"></canvas>
-  <h1><a href="/home">Click here to go back home</a></h1>
-
-  <script>
-    const bgColors = ['#222', '#fff', '#a5ed6e'];
-    const buttonColors = ['#111', '#ccc', '#7cc048'];
-    const buttonText = ['#fff', '#000', '#fff'];
-
-    let currentIndex = localStorage.getItem('bgColorSave') !== null
-      ? parseInt(localStorage.getItem('bgColorSave'))
-      : 0;
-
-    const bgButton = document.getElementById('bgButton');
-
-    function updateColors() {
-      document.body.style.backgroundColor = bgColors[currentIndex];
-      bgButton.style.backgroundColor = buttonColors[currentIndex];
-      bgButton.style.color = buttonText[currentIndex];
-    }
-
-    updateColors();
-
-    bgButton.addEventListener('click', () => {
-      currentIndex = (currentIndex + 1) % bgColors.length;
-      localStorage.setItem('bgColorSave', currentIndex);
-      updateColors();
-    });
-  </script>
-  <script src="/snake.js"></script>
-</body>
+    <script src="/snake.js"></script>
+  </body>
 
 </html>
