--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -88,8 +88,12 @@
     </head>
 
     <body>
-
+        <!-- Logo Section -->
+        <div>
+            <img src="/path/to/logo.png" alt="Snake Game Logo">
+        </div>
         <ul>
+            <!-- Navigation Menu -->
             <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#">Bronze Coin</a></li>
             <li><a href="#">Silver Coin</a></li>
