Added pages to the shop

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,10 +36,10 @@
                 <p>Created by: The Garter company!</p>
                 <p>Choose an option below:</p>
                 <div class="links">
+                    <a href="/shop" class="cute-button">Customizations</a>
                     <a href="/game" class="cute-button">Play the Game!</a>
                     <a href="/chat" class="cute-button">World Chat</a>
                     <a href="/highScore" class="cute-button">View Top Scores</a>
-                    <a href="/shop" class="cute-button">Go to The Shop</a>
                     <a href="/logout" class="cute-button">Logout</a>
                 </div>
             </div>
