--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -4,9 +4,11 @@
     <html lang="en">
 
     <head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snake Item Shop</title>
+        <!-- This adds the house picture and arrows -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <style>
             body {
@@ -17,7 +19,7 @@
                 color: #333;
             }
 
-            /* Logo and Navigation */
+            /* Navigation */
             div img {
                 display: block;
                 margin: 20px auto;
@@ -88,20 +90,17 @@
     </head>
 
     <body>
-        <!-- Logo Section -->
-        <div>
-            <img src="/path/to/logo.png" alt="Snake Game Logo">
+        <div class="title">
+
+            <h1>Customizations Page</h1>
         </div>
+
         <ul>
             <!-- Navigation Menu -->
             <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="#">Bronze Coin</a></li>
-            <li><a href="#">Silver Coin</a></li>
-            <li><a href="#">Gold Coin</a></li>
-            <li><a href="#">Dollar Bill</a></li>
-            <li><a href="#">Money Bag</a></li>
-            <li><a href="#">Pig Bank</a></li>
-            <li><a href="#">Diamond</a></li>
+            <li><a href="/mapselections">Map selection</a></li>
+            <li><a href="/closet">Snake's Closet</a></li>
+            <li><a href="/items">Item Shop</a></li>
             <li><a href="#"><i class="fa fa-caret-down"></i> More Options: <i class="fa fa-caret-down"></i></a>
                 <div class="sub-menu">
                     <ul>
@@ -111,10 +110,6 @@
                 </div>
             </li>
         </ul>
-
-        <div class="title">
-            <h1>Snake Item Shop</h1>
-        </div>
     </body>
 
     </html>
